src/log/build_2024-05-06_21-54-25/escape_from_cart/stderr.log
  File "/home/oh/slam_ws/src/install/escape_from_cart/lib/python3.10/site-packages/escape_from_cart/escape_accel.py", line 3
    from rclpy
              ^
SyntaxError: invalid syntax

